--- a/BBMS/templates/User/client_dash_base.html
+++ b/BBMS/templates/User/client_dash_base.html
@@ -92,6 +92,7 @@ body{
 
 .wrapper .sidebar ul li a .fas{
   width: 25px;
+  {% comment %}  {% endcomment %}
 }
 
 .wrapper .sidebar ul li:hover{
@@ -161,7 +162,7 @@ body{
 
 {% include 'Blood_Bank/navbar.html' %}
 <br><br>
-<div class="wrapper" m-0 p-0>
+<div class="wrapper" style="margin-top: -16px;">
     <div class="sidebar">
         
         <ul>
@@ -183,6 +184,8 @@ body{
 
     </div>
 </div>
+<br>
+
 
 <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -192,8 +195,4 @@ body{
 
 </body>
 </html>
-<!--
-developed By : sumit kumar
-facebook : fb.com/sumit.luv
-youtube : youtube.com/lazycoders
--->
+
