--- a/BBMS/templates/Admin/admin_dashboard.html
+++ b/BBMS/templates/Admin/admin_dashboard.html
@@ -1,4 +1,4 @@
-{% extends 'User/client_dash_base.html' %}
+{% extends 'Admin/admin_dash_base.html' %}
 {% block content %}
 <div class="container">
     <div class="row" style="margin-top: 28px;">
@@ -54,7 +54,7 @@
   
       <div class="row">
         <div class="col-sm-3">
-          <div class="card bg-dark">
+          <div class="card bg-light">
             <div class="card-body">
                 <div class="blood">
                     <h2>A- <i class="fas fa-tint" style="color: red;"></i></h2>
@@ -118,7 +118,7 @@
         </div>
       </div>
       <div class="col-sm-3">
-          <div class="card bg-dark">
+          <div class="card bg-light">
               <div class="card-body">
                   <div class="blood">
                       <i class="fas fa-spinner"></i>
@@ -144,7 +144,7 @@
             </div>
         </div>
         <div class="col-sm-3">
-          <div class="card bg-dark">
+          <div class="card bg-light">
               <div class="card-body">
                   <div class="blood">
                       <i class="fas fa-tint xyz"></i>
