--- a/templates/User/user_login.html
+++ b/templates/User/user_login.html
@@ -43,7 +43,7 @@
                     <p><b>Haven't registered yet? </b><a href="/client/registration" class="text-dark-50 fw-bold" style="text-decoration: none;"><b>Register Here</b></a></p>
                   </div>
                 </div>
-                some changes
+                some changes done
             </div>
             </div>
           </div>
