Some CSS changed in Login and Registration form, also Stock registration on admin panel

--- a/templates/Admin/admin_login.html
+++ b/templates/Admin/admin_login.html
@@ -32,7 +32,7 @@
                     </div>
                     </div>
                     <input type="hidden" value="adminloginform" name="loginform">
-                    <button class="btn btn-danger btn-lg px-3 mb-2" type="submit"><b>Login</b></button> 
+                    <button class="btn btn-danger btn-sm px-3 mb-2" type="submit"><b>Login</b></button> 
                     <p style="color:red;"><b>{% for message in messages %}
                       {{message}}
                       {% endfor %}</b></p>
