--- a/templates/User/user_login.html
+++ b/templates/User/user_login.html
@@ -33,7 +33,7 @@
                     </div>
                     </div>
                     <input type="hidden" value="clientloginform" name="loginform">
-                    <button class="btn btn-danger btn-lg px-3 mb-2" type="submit"><b>Login</b></button> 
+                    <button class="btn btn-danger btn-sm px-3 mb-2" type="submit"><b>Login</b></button> 
                     <p style="color:red;"><b>{% for message in messages %}
                       {{message}}
                       {% endfor %}</b></p>
@@ -43,7 +43,7 @@
                     <p><b>Haven't registered yet? </b><a href="/client/registration" class="text-dark-50 fw-bold" style="text-decoration: none;"><b>Register Here</b></a></p>
                   </div>
                 </div>
-                some changes done
+                
             </div>
             </div>
           </div>
