--- a/templates/User/user_registration.html
+++ b/templates/User/user_registration.html
@@ -10,7 +10,7 @@
           <div class="card rounded-7">
             <img src='{% static "/images/back6.png" %}' class="w-100" style="border-top-left-radius: .3rem; border-top-right-radius: .3rem;" alt="Sample photo">
             <div class="card-body p-4 p-md-5 m-5" style="padding-top:200px;">
-              <h3 class="mb-4 pb-2 pb-md-0 mb-md-5 px-md-2">&nbsp;&nbsp;&nbsp;&nbsp;Registration Your Info</h3>
+              <h3 class="mb-4 pb-2 pb-md-0 mb-md-5 px-md-2">&nbsp;&nbsp;&nbsp;&nbsp;Client Registration</h3>
               <form class="mx-1 mx-md-4" method="post" action="/client/registration/">
                 {% csrf_token %}
               
@@ -70,14 +70,20 @@
                   </div>
                 </div>
                 <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                  <button type="submit" class="btn btn-outline-dark btn-lg px-5 mb-0">Register</button>
+                  <button type="submit" class="btn btn-outline-danger btn-sm px-5 mb-0"><b>Register</b></button>
                 </div>
   
                 <p style="color:red;">{% for message in messages %}
                   {{message}}
                   {% endfor %}</p>
+                  <br>
+
+                  <div>
+                    <p><b>&nbsp;&nbsp;&nbsp; Already have an account? </b><a href="/client/login" class="text-dark-50 fw-bold" style="text-decoration: none;"><b>Login</b></a></p>
+                  </div>
               
               </form>
+
             </div>
           </div>
         </div>
