--- a/templates/User/user_login.html
+++ b/templates/User/user_login.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="mid">
-    <section class="vh-100 gradient-custom" style="background-color: rgb(37, 173, 155);">
+    <section class="vh-100 gradient-custom" style="background-color: #000022;">
       <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
           <div class="col-12 col-md-8 col-lg-6 col-xl-5">
