--- a/templates/Admin/admin_login.html
+++ b/templates/Admin/admin_login.html
@@ -10,7 +10,7 @@
             <div style="border-radius: 1rem; background-color:rgb(255, 255, 255); color:rgb(0, 0, 0);">
               <div class="card-body p-5 text-center">
     
-                <div class="mb-md-5 mt-md-4 pb-5">
+                <div class="mb-md-12 mt-md-10 pb-5">
                   <form action="/client/login/" method="post">
                     {% csrf_token %}
                     <h2 class="fw-bold mb-3 text-uppercase"> Admin Login</h2>        
@@ -32,11 +32,17 @@
                     </div>
                     </div>
                     <input type="hidden" value="adminloginform" name="loginform">
-                    <button class="btn btn-danger btn-sm px-3 mb-2" type="submit"><b>Login</b></button> 
-                    <p style="color:red;"><b>{% for message in messages %}
-                      {{message}}
-                      {% endfor %}</b></p>
+                    <button class="btn btn-danger btn-sm px-3 mb-2" type="submit" style="margin-left: -40px;"><b>Login</b></button> 
                   </form>     
+                  <div class="col-md-12">
+                    {% if messages %}
+                      {% for message in messages %}
+                        <div class="alert alert-danger">
+                          {{ message }}
+                        </div>
+                      {% endfor %}
+                    {% endif %}
+                  </div> 
               </div>
             </div>
           </div>
