--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -20,6 +20,17 @@
     /* background-color: white; */
 }
 
+.profile{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.profileimg img{
+    border-radius: 80%;
+    height: 6vh;
+}
 
 
   
