User Profile Section Almost Done

--- a/templates/Blood_Bank/navbar.html
+++ b/templates/Blood_Bank/navbar.html
@@ -36,7 +36,7 @@
                       <img src="{{user.profile.profile_pic.url}}" alt="">
                     </div>&nbsp;
                     <div class="bbms">
-                      <a class="navbar-brand" href="#" style="color:#FFFFFF;"><b>{{user.username}}</b></a>
+                      <a class="navbar-brand" href="/user/profile/" style="color:#FFFFFF;"><b>{{user.username}}</b></a>
                     </div>
                   </div>
                 </li>
