--- a/templates/Blood_Bank/navbar.html
+++ b/templates/Blood_Bank/navbar.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="header" pb-5>
-        <nav class="navbar fixed-top navbar-expand-sm navbar-dark" style="background-color: #ED5050; border-bottom:3px solid black">
+        <nav class="navbar fixed-top navbar-expand-sm navbar-dark" style="background-color: #FF0000; border-bottom:3px solid black">
           <div class="logo">
             <div class="imgleft">
               <img src="{% static 'images/OIP.jpg' %}" alt="">
@@ -28,8 +28,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
               
-              {% if user.is_authenticated  %}
-              
+              {% if user.is_authenticated and request.user_role %}
                 <li class="nav-item">
                   <div class="logo">
                     <div class="imgleft">
