Registration using UCF and Starting to do blood request

--- a/templates/User/client_dash_base.html
+++ b/templates/User/client_dash_base.html
@@ -166,9 +166,9 @@ body{
     <div class="sidebar">
         
         <ul>
-            <li><a style="text-decoration:none;" href="#"><i class="fas fa-home"></i>Home</a></li>
-            <li><a style="text-decoration:none;" href="/patient/make-request"><i class="fas fa-sync-alt"></i>Make Request</a></li>
-            <li><a style="text-decoration:none;" href="/patient/my-request"><i class="fas fa-history"></i>Request History</a></li>
+            <li><a style="text-decoration:none;" href="/client/client-dash/"><i class="fas fa-home"></i>Home</a></li>
+            <li><a style="text-decoration:none;" href="/client/make-request/"><i class="fas fa-sync-alt"></i>Makeee Request</a></li>
+            <li><a style="text-decoration:none;" href="/client/my-request/"><i class="fas fa-history"></i>Request History</a></li>
 
         </ul> 
 
