--- a/templates/Admin/updateclient.html
+++ b/templates/Admin/updateclient.html
@@ -1,53 +1,7 @@
-
-{% extends 'Blood_Bank/base.html' %}
+{% extends 'Admin/admin_dash_base.html' %}
 {% load crispy_forms_tags %}
+{% load static %}
 
-{% block css %}
-body {
-    background-color: #25AD9B;
-}
-
-.form-control:focus {
-    box-shadow: none;
-    border-color: #BA68C8
-}
-
-.profile-button {
-    background: rgb(99, 39, 120);
-    box-shadow: none;
-    border: none
-}
-
-.profile-button:hover {
-    background: #682773
-}
-
-.profile-button:focus {
-    background: #682773;
-    box-shadow: none
-}
-
-.profile-button:active {
-    background: #682773;
-    box-shadow: none
-}
-
-.back:hover {
-    color: #682773;
-    cursor: pointer
-}
-
-.labels {
-    font-size: 11px
-}
-
-.add-experience:hover {
-    background: #BA68C8;
-    color: #fff;
-    cursor: pointer;
-    border: solid 1px #BA68C8
-}
-{% endblock css %}
 {% block content %}
 <div class="container rounded bg-white mt-5 mb-5 align - center " >
     <div class="row" >
@@ -55,11 +9,11 @@ body {
             <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" src="{{user.profile.profile_pic.url}}"><b>{{user.first_name|add:" "|add:user.last_name}} </b></span><span class="text-danger"><b>{{user.email}}</b></span><span> </span></div>
         </div>
         <div class="col-md-5 border-right" >
-            <form action="/user/profile/{{user.id}}/" method="POST" enctype="multipart/form-data">
+            <form action="/admin/update-client/{{user.id}}/" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 <fieldset class="form-group">
                     <legend class="border-bottom mb-4">
-                        <b>Profile Settings</b>
+                        <b> User Profile Settings</b>
                         <hr>
                         <div class="col-md-12">
                             {% if messages %}
