--- a/templates/Blood_Bank/navbar.html
+++ b/templates/Blood_Bank/navbar.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../static/css/navbar.css">
+    <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
     <script src="https://kit.fontawesome.com/7a89f58fe1.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -32,10 +32,10 @@
                 <li class="nav-item">
                   <div class="logo">
                     <div class="imgleft">
-                      <img src="{{user.profile.profile_pic.url}}" alt="">
+                      <img src="{{ request.user.profile.profile_pic.url}}" alt="">
                     </div>&nbsp;
                     <div class="bbms">
-                      <a class="navbar-brand" href="/user/profile/" style="color:#FFFFFF;"><b>{{user.username}}</b></a>
+                      <a class="navbar-brand" href="/user/profile/{{request.user.id}}" style="color:#FFFFFF;"><b>{{request.user.username}}</b></a>
                     </div>
                   </div>
                 </li>
