Campaign Section Complete on Admin Side

--- a/templates/User/client_dashboard.html
+++ b/templates/User/client_dashboard.html
@@ -1,6 +1,10 @@
 {% extends 'User/client_dash_base.html' %}
 {% block content %}
 <div class="container">
+    <br>
+    <hr>
+    <h3 style = "text-align:center;"><b>Client-Dashboard</b></h3>
+    <hr>
     <div class="row" style="margin-top: 28px;">
         <div class="col-sm-3">
           <div class="card bg-light">
@@ -54,7 +58,7 @@
   
       <div class="row">
         <div class="col-sm-3">
-          <div class="card bg-dark">
+          <div class="card bg-light">
             <div class="card-body">
                 <div class="blood">
                     <h2>A- <i class="fas fa-tint" style="color: red;"></i></h2>
@@ -105,7 +109,7 @@
 <hr>
     <div class="row">
       <div class="col-sm-3">
-        <div class="card bg-light">
+        <div class="card bg-dark">
           <div class="card-body">
               <div class="blood">
                   <i class="fas fa-users"></i>
@@ -131,7 +135,7 @@
             </div>
       </div>
       <div class="col-sm-3">
-          <div class="card bg-light">
+          <div class="card bg-dark">
               <div class="card-body">
                   <div class="blood">
                       <i class="far fa-check-circle"></i>
