--- a/templates/Admin/admin_dash_base.html
+++ b/templates/Admin/admin_dash_base.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ADMIN</title>
+    <title>
+      {% block title %}
+      {% endblock title %}
+    </title>
 
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -177,14 +180,8 @@ body{
 
     </div>
     <div class="main_content">
-
-
-{% block content %}
-
-{% endblock content %}
-
-
-
+      {% block content %}
+      {% endblock content %}
     </div>
 </div>
 <br>
