--- a/templates/Admin/create_campaign.html
+++ b/templates/Admin/create_campaign.html
@@ -3,48 +3,115 @@
 {% load static %}
 
 {% block content %}
-
-<section class="h-100 h-custom" style="background-color: rgb(37, 173, 155);">
-    <div class="container py-5 h-100">
-        <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="col-lg-8 col-xl-6">
-            <div class="card rounded-7">
-            {% comment %} <img src='{% static "/images/back6.png" %}' class="w-100" style="border-top-left-radius: .3rem; border-top-right-radius: .3rem;" alt="Sample photo"> {% endcomment %}
-            <div class="card-body p-4 p-md-5 m-5" style="padding-top:200px;">
-                <h2 class="mb-2 pb-2 pb-md-0 mb-md-5 px-md-2 text-center" style="color:red;"><hr>Create Campaign<hr></h2>
-                
+<div class="container">
+  <!-- Button trigger modal -->
+      <!-- Modal -->
+      <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLongTitle"><b>Create Campaign</b></h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
                 <form class="mx-1 mx-md-4" method="post" action="/admin/create-campaign/" enctype="multipart/form-data">
-                {% csrf_token %}
-                  {{campaignform|crispy}}
-                
-                <button type="submit" class="btn btn-danger">Create Campaign</button>
-                </form><br><br>
-                <div class="col-md-12">
-                {% if messages %}
-                    {% for message in messages %}
-                    <div class="alert alert-danger">
-                        {{ message }}
-                    </div>
-                    {% endfor %}
-                {% endif %}
-                </div> 
-
+                    {% csrf_token %}
+                      {{campaignform|crispy}}
             </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="submit" class="btn btn-danger">Create Campaign</button>
             </div>
+        </form>
+          </div>
         </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+      </div>
+      <br>
+      <button type="button" class="btn btn-primary " data-toggle="modal" data-target="#exampleModalLong" style="align:center;">
+        Create Campaign
+      </button>
+      <hr><hr>
+      <div class="row d-flex justify-content-center align-items-center h-100">
+          {% for campaign in campaigns %}
+          <div class="card text-white bg-dark mb-3 mx-3" style="width: 18rem;">
+            <img class="card-img-top" src="{% static 'images/back6.png' %}" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title" id="ename">{{campaign.event_name}}</h5>
+              <hr>
+                <p>Date : <strong id="edate">{{campaign.date}}</strong></p>
+              <hr>
+              <p>Time : <strong id="etime">{{campaign.time}}</strong></p>
+              <hr>
+              <p>Location : <strong id="elocation">{{campaign.location}}</strong></p>
+              <hr>
+              <p>Contact : <strong id="econtact">{{campaign.contact}}</strong></p>
+              <hr>
+                <a href="{% url 'edit_campaign' campaign.id %}" class="btn btn-info" style="text-decoration:None; color:white;">Edit</a>
+              {% comment %}  {% endcomment %}
+              <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal">
+                Delete
+              </button>
             </div>
           </div>
+          <!-- Delete Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Delete Campaign</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Delete the Campaign? Are you sure?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+        <a href=" {% url 'delete_campaign' campaign.id %} " class="btn btn-danger" id="deletebtn">Yes,Delete</a>
+      </div>
     </div>
+  </div>
+</div>
+          {% endfor %}
+      </div>    
+</div>
+<script>
+    let btn = document.getElementById("Editbtn");
+    
+    btn.addEventListener("click",()=>{
+        let ename = document.getElementById("ename").innerHTML;
+        let edate = document.getElementById("edate").innerHTML;
+        let etime = document.getElementById("etime").innerHTML;
+        let elocation = document.getElementById("elocation").innerHTML;
+        let econtact = document.getElementById("econtact").innerHTML;
 
-    </section>
+        let deletebtn = document.getElementById("deletebtn");
+        deletebtn.addEventListener('click',()=>{
+            window.alert("Campaign deleted successfully!");
+        })
+
+        //window.alert(ename)
+        //window.alert(edate)
+        //window.alert(etime)
+        //window.alert(elocation)
+        //window.alert(econtact)
+        let name = document.getElementById("id_event_name")
+        let date = document.getElementById("id_date")
+        let time = document.getElementById("id_time")
+        let location = document.getElementById("id_location")
+        let contact = document.getElementById("id_contact")
 
 
+        name.value = ename;
+        date.value = edate;
+        time.value = etime;
+        location.value = elocation;
+        contact.value = econtact;
+        
+    })
 
+</script>
 {% endblock content %}
