--- a/templates/User/client_dash_base.html
+++ b/templates/User/client_dash_base.html
@@ -52,7 +52,7 @@
 }
 
 body{
-   background-color: #f3f5f9;
+  background-color: #25AD9B;
 }
 .bg-danger {
     background-color: #ff0018!important;
@@ -158,7 +158,7 @@ body{
 
     </style>
 </head>
-<body>
+<body style="background:#25AD9B;">
 
 {% include 'Blood_Bank/navbar.html' %}
 <br><br>
