Blood request section

--- a/templates/User/client_dash_base.html
+++ b/templates/User/client_dash_base.html
@@ -11,151 +11,148 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.css">
 
     <style>
+      {% block css %}
+                
+              .row{
+                padding: 5px;
+            }
+            .fa-tint{     
+                color: red;    
+            }
+            .blood{
+                float: right;
+            }
+            .fa-users{     
+                color: blue; 
+                font-size: 3ex;   
+            }
+            .fa-spinner{     
+                color: blue; 
+                font-size: 3ex;   
+            }
+            .fa-check-circle{     
+                color: blue; 
+                font-size: 3ex;   
+            }
+            .xyz{     
+                color: blue; 
+                font-size: 3ex;   
+            }
 
+          *{
+          margin: 0;
+          padding: 0;
+          box-sizing: border-box;
+          list-style: none;
+          text-decoration: none;
+          font-family: 'Josefin Sans', sans-serif;
+          }
 
+          body{
+          background-color: #25AD9B;
+          }
+          .bg-danger {
+            background-color: #ff0018!important;
+          }
 
- 
+          .wrapper{
+          display: flex;
+          position: relative;
+          }
 
-    .row{
-        padding: 5px;
-    }
-    .fa-tint{     
-        color: red;    
-    }
-    .blood{
-        float: right;
-    }
-    .fa-users{     
-        color: blue; 
-        font-size: 3ex;   
-    }
-    .fa-spinner{     
-        color: blue; 
-        font-size: 3ex;   
-    }
-    .fa-check-circle{     
-        color: blue; 
-        font-size: 3ex;   
-    }
-    .xyz{     
-        color: blue; 
-        font-size: 3ex;   
-    }
+          .wrapper .sidebar{
+          width: 200px;
+          height: 100%;
+          background: #343a40;
+          padding: 30px 0px;
+          position: fixed;
+          }
 
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  list-style: none;
-  text-decoration: none;
-  font-family: 'Josefin Sans', sans-serif;
-}
+          .wrapper .sidebar h2{
+          color: #fff;
+          text-transform: uppercase;
+          text-align: center;
+          margin-bottom: 30px;
+          }
 
-body{
-  background-color: #25AD9B;
-}
-.bg-danger {
-    background-color: #ff0018!important;
-}
+          .wrapper .sidebar ul li{
+          padding: 15px;
+          border-bottom: 1px solid #bdb8d7;
+          border-bottom: 1px solid rgba(0,0,0,0.05);
+          border-top: 1px solid rgba(255,255,255,0.05);
+          }    
 
-.wrapper{
-  display: flex;
-  position: relative;
-}
+          .wrapper .sidebar ul li a{
+          color: #bdb8d7;
+          display: block;
+          }
 
-.wrapper .sidebar{
-  width: 200px;
-  height: 100%;
-  background: #343a40;
-  padding: 30px 0px;
-  position: fixed;
-}
+          .wrapper .sidebar ul li a .fas{
+          width: 25px;
+          {% comment %}  {% endcomment %}
+          }
 
-.wrapper .sidebar h2{
-  color: #fff;
-  text-transform: uppercase;
-  text-align: center;
-  margin-bottom: 30px;
-}
+          .wrapper .sidebar ul li:hover{
+          background-color: #594f8d;
+          }
+            
+          .wrapper .sidebar ul li:hover a{
+          color: #fff;
+          }
 
-.wrapper .sidebar ul li{
-  padding: 15px;
-  border-bottom: 1px solid #bdb8d7;
-  border-bottom: 1px solid rgba(0,0,0,0.05);
-  border-top: 1px solid rgba(255,255,255,0.05);
-}    
+          .wrapper .sidebar .social_media{
+          position: absolute;
+          bottom: 0;
+          left: 50%;
+          transform: translateX(-50%);
+          display: flex;
+          }
 
-.wrapper .sidebar ul li a{
-  color: #bdb8d7;
-  display: block;
-}
+          .wrapper .sidebar .social_media a{
+          display: block;
+          width: 40px;
+          background: #594f8d;
+          height: 40px;
+          line-height: 45px;
+          text-align: center;
+          margin: 0 5px;
+          color: #bdb8d7;
+          border-top-left-radius: 5px;
+          border-top-right-radius: 5px;
+          }
 
-.wrapper .sidebar ul li a .fas{
-  width: 25px;
-  {% comment %}  {% endcomment %}
-}
+          .wrapper .main_content{
+          width: 100%;
+          margin-left: 200px;
+          }
 
-.wrapper .sidebar ul li:hover{
-  background-color: #594f8d;
-}
-    
-.wrapper .sidebar ul li:hover a{
-  color: #fff;
-}
- 
-.wrapper .sidebar .social_media{
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  display: flex;
-}
+          .wrapper .main_content .header{
+          padding: 20px;
+          background: #fff;
+          color: #717171;
+          border-bottom: 1px solid #e0e4e8;
+          }
 
-.wrapper .sidebar .social_media a{
-  display: block;
-  width: 40px;
-  background: #594f8d;
-  height: 40px;
-  line-height: 45px;
-  text-align: center;
-  margin: 0 5px;
-  color: #bdb8d7;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
-}
+          .wrapper .main_content .info{
+          margin: 20px;
+          color: #717171;
+          line-height: 25px;
+          }
 
-.wrapper .main_content{
-  width: 100%;
-  margin-left: 200px;
-}
+          .wrapper .main_content .info div{
+          margin-bottom: 20px;
+          }
 
-.wrapper .main_content .header{
-  padding: 20px;
-  background: #fff;
-  color: #717171;
-  border-bottom: 1px solid #e0e4e8;
-}
-
-.wrapper .main_content .info{
-  margin: 20px;
-  color: #717171;
-  line-height: 25px;
-}
-
-.wrapper .main_content .info div{
-  margin-bottom: 20px;
-}
-
-@media (max-height: 500px){
-  .social_media{
-    display: none !important;
-  }
-}
-.fa-sign-out-alt{
-    color: white;
-    font-size: 2ex;
-}
-
+          @media (max-height: 500px){
+          .social_media{
+            display: none !important;
+          }
+          }
+          .fa-sign-out-alt{
+            color: white;
+            font-size: 2ex;
+          }
+      {% endblock css %}
     </style>
 </head>
 <body style="background:#25AD9B;">
@@ -167,7 +164,10 @@ body{
         
         <ul>
             <li><a style="text-decoration:none;" href="/client/client-dash/"><i class="fas fa-home"></i>Home</a></li>
-            <li><a style="text-decoration:none;" href="/client/make-request/"><i class="fas fa-sync-alt"></i>Makeee Request</a></li>
+            <li><a style="text-decoration:none;" href="/client/make-request/"><i class="fas fa-sync-alt"></i>Request Blood</a></li>
+            <li><a style="text-decoration:none;" href="/client/make-request/"><i class="fas fa-sync-alt"></i>Donate Blood</a></li>
+            <li><a style="text-decoration:none;" href="/client/make-request/"><i class="fas fa-sync-alt"></i>Campaigns</a></li>
+          
             <li><a style="text-decoration:none;" href="/client/my-request/"><i class="fas fa-history"></i>Request History</a></li>
 
         </ul> 
