--- a/templates/User/mybloodrequest.html
+++ b/templates/User/mybloodrequest.html
@@ -32,7 +32,7 @@
                 {% elif t.status == 'Rejected' %}
                 <td><span class="label success">Rejected</span></td>
                 {% else %}
-                <td><span style="color: white;margin-left: 0px;" class="label dark">Pending</span></td>
+                <td><span style="color: black;margin-left: 0px;" class="label dark">Pending</span></td>
                 {% endif %} 
                 
 
