--- a/templates/Admin/viewclient.html
+++ b/templates/Admin/viewclient.html
@@ -28,19 +28,38 @@
                 <td>
                     <button class="btn btn-info"><a href="{% url 'update_client' t.user.id %}" style="text-decoration:none; color:white;">Edit</a></button>
                     &nbsp 
-                    <button class="btn btn-danger">Delete</button>
-
+                    {% comment %} <button class="btn btn-danger"><a href="{% url 'delete_client' t.user.id %}" style="text-decoration:none; color:white;">Delete</a></button> {% endcomment %}
+                    <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal">
+                        Delete
+                    </button>
                 </td>
+                <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h5 class="modal-title" id="exampleModalLabel">Delete Campaign</h5>
+                          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                          </button>
+                        </div>
+                        <div class="modal-body">
+                          Delete the User? Are you sure?
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+                          <button class="btn btn-danger"><a href="{% url 'delete_client' t.user.id %}" style="text-decoration:none; color:white;">Yes,Delete</a></button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 {% comment %} {% if t.status == 'Approved' %}
                 <td><span class="label warning"> Approved</span></td>
-                
                 {% elif t.status == 'Rejected' %}
                 <td><span class="label success">Rejected</span></td>
                 {% else %}
                 <td><span style="color: white;margin-left: 0px;" class="label dark">Pending</span></td>
                 {% endif %} 
                  {% endcomment %}
-
             </tr>
             {% endfor %} 
 
