Bloodrequest approve+reject, campaign show in client section

--- a/templates/Admin/viewclient.html
+++ b/templates/Admin/viewclient.html
@@ -37,7 +37,7 @@
                     <div class="modal-dialog" role="document">
                       <div class="modal-content">
                         <div class="modal-header">
-                          <h5 class="modal-title" id="exampleModalLabel">Delete Campaign</h5>
+                          <h5 class="modal-title" id="exampleModalLabel">Delete User</h5>
                           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                           </button>
@@ -59,7 +59,7 @@
                 {% else %}
                 <td><span style="color: white;margin-left: 0px;" class="label dark">Pending</span></td>
                 {% endif %} 
-                 {% endcomment %}
+                {% endcomment %}
             </tr>
             {% endfor %} 
 
