--- a/templates/Admin/admin_dash_base.html
+++ b/templates/Admin/admin_dash_base.html
@@ -167,7 +167,7 @@
         <ul>
             <li><a style="text-decoration:none;" href="/admin/admin-dash/"><i class="fas fa-home"></i>Home</a></li>
             <li><a style="text-decoration:none;" href="{% url 'view_client' %}"><i class="fas fa-sync-alt"></i>Clients</a></li>
-            <li><a style="text-decoration:none;" href="#"><i class="fas fa-sync-alt"></i>Blood Requests</a></li>
+            <li><a style="text-decoration:none;" href="/admin/view-bloodrequests/"><i class="fas fa-sync-alt"></i>Blood Requests</a></li>
             <li><a style="text-decoration:none;" href="#"><i class="fas fa-history"></i>Donation Requests</a></li>
             <li><a style="text-decoration:none;" href="/admin/blood-stock"><i class="fas fa-history"></i>Stocks</a></li>
             <li><a style="text-decoration:none;" href="{% url 'Create_Campaign' %}"><i class="fas fa-sync-alt"></i>Campaigns</a></li>
